--- a/src/content/docs/skale-bridge/skale/bridge-erc721.mdx
+++ b/src/content/docs/skale-bridge/skale/bridge-erc721.mdx
@@ -3,3 +3,107 @@ title: Bridge ERC-721 Tokens
 description: Guide on bridging ERC-721 tokens on SKALE
 ---
 
+import { Aside, Code, Tabs, TabItem } from "@astrojs/starlight/components";
+
+{/* Solidity Code Example Imports */}
+import InterchainERC721Code from "../ethereum/examples/InterchainERC721.sol?raw";
+import InterchainNFTCode from "../ethereum/examples/InterchainNFT.sol?raw";
+
+{/* Deposit Code Example Imports */}
+import bridgeERC721Js from "./examples/bridge-erc721.js?raw";
+
+SKALE's Interchain Messaging Agent (IMA) Bridge allows for direct communication and bridging between SKALE Chains (without ever going to Mainnet).
+
+The following walks you through setting up an ERC-721 token between two SKALE Chains and how to programatically bridge.
+
+<Aside type="note">
+Moving assets between two SKALE Chains i.e Europa and Nebula requires no custom modifications. However, assets bridged in from Ethereum between multiple SKALE Chains requires extra steps by default.
+</Aside>
+
+## Important Information
+- When a SKALE Chain is created, there are no ERC-721 tokens mapped by default
+- A token being bridged between two chains should have its supply **issued** (i.e minted) on one chain. The second SKALE Chain mints by design via IMA, however, the token should not be mintable any other way
+- Tokens being bridged from SKALE Chain to SKALE Chain are locked in TokenManagerERC721 on the origin chain
+- Tokens being bridged from SKALE Chain to SKALE Chain are minted by IMA on the destination chain
+
+## Bridge Setup
+
+### 1. Prepare the ERC-721
+
+ERC-721 tokens that are being bridged between SKALE Chains should have the **mint** function that is locked down to TokenManagerERC721. 
+
+<Aside type="danger" title="Caution on Minting">
+If the mint function is not locked down to just the IMA Bridge, specifically TokenManagerERC721; there is a chance that the existing tokens on the SKALE Chain may not match what is secured in the bridge.
+</Aside>
+
+<Aside type="caution" title="Caution on Burning">
+If the burn function is not locked down to just the IMA Bridge, specifically TokenManagerERC721; there is a chance that the supply on the SKALE Chain side could be "burned", while the tokens still exist on Ethereum which could later be withdrawn under certain circumstances. It is recommended that explicit burns on a SKALE Chain should be avoided for bridged tokens.
+</Aside>
+
+The following is the base interchain token code that meets the above bridging requirements for IMA. It is not recommended to use this directly, but to use a wrapper. See **YourInterchainNFT.sol** for an example.
+
+<Code code={InterchainERC721Code} lang="solidity" title="InterchainERC721.sol" />
+### 2. Deploy the ERC-721 on SKALE
+
+Utilize your preferred tooling i.e [Foundry](https://getfoundry.sh), [Hardhat](https://hardhat.org), [Remix](https://remix.ethereum.org/#lang=en&optimize=false&runs=200&evmVersion=paris&version=soljson-v0.8.19+commit.7dd6d404.js), etc. to deploy your IMA compatible ERC-721 token to the SKALE Chain you want to be able to bridge assets too.
+
+<Code code={InterchainNFTCode} lang="solidity" title="YourInterchainNFT.sol" />
+
+> *InterchainERC721.sol is inherited from the code above*
+
+### 3. Map the SKALE and Ethereum tokens together
+
+<Aside type="note">
+If you are trying to setup a token on SKALE in a production environment please join us in [Discord](https://discord.gg/skale) for support!
+</Aside>
+
+#### Add the token on Ethereum via SAFE
+
+Start by visiting your SAFE via the official SAFE website or your preferred tool. If you are unsure, you can follow the steps [here](/run-a-skale-chain/using-safe).
+
+Once on your SAFE, start by preparing a transaction via the **Transaction Builder**. Follow these steps:
+
+1. Input the DepositBoxERC721 address into the address field.
+2. Select **Use Implementation ABI**
+3. Select `addERC721TokenByOwner` for the method
+4. Input your *SKALE Chain Name* and your ERC-721 contract address on Ethereum in the fields
+5. Send by itslef or via batch
+
+<Aside type="caution">
+Make sure to replace the values with your SKALE Chain name and the correct token addresses.
+</Aside>
+
+#### Add the token on SKALE Chain TokenManagerERC721
+- **DST_SCHAIN_NAME** is the name of the sChain that the transaction should execute on
+- **ORIGIN_SCHAIN_NAME** is the name of the sChain that the token is being mapped from
+- **0x_ORIGIN_TOKEN** is the original token address on the ORIGIN_SCHAIN_NAME
+- **0x_DST_TOKEN** is the destination token address on the DST_SCHAIN_NAME
+
+<Tabs>
+  <TabItem label="Multisigwallet CLI">
+    ```shell
+    npx msig encodeData [DST_SCHAIN_NAME] TokenManagerERC721 addERC20TokenByOwner [ORIGIN_SCHAIN_NAME] [0x_ORIGIN_TOKEN] [0x_DST_TOKEN]
+    ```
+    After this, execute by following the steps on [Using SAFE](/run-a-skale-chain/using-safe#submit-transaction-to-safe)
+  </TabItem>
+</Tabs>
+
+#### Verify the Mapping
+
+To verify the mapping, you should have an event emitted from TokenManagerERC721 on SKALE Chain - `event ERC721TokenAdded(SchainHash indexed chainHash, address indexed erc721OnMainChain, address indexed erc721OnSchain);`
+
+## Bridging ERC-721
+
+The following does not require you to setup your own token. This works with **ANY** ERC-721 token that is mapped from Ethereum to any SKALE Chain as long as the actual ERC-721 token on each side does not have additional restrictions around who can transfer.
+
+The flow for bridging an ERC-721 from Ethereum to SKALE follows a very similiar flow to a standard ERC-721 transfer:
+
+1. Approve the bridge contract on the ERC-721 token to allow it to move your NFTs
+2. Call the bridge directly to transfer the specific ERC-721 from Ethereum -> SKALE Chain, if the mapping exists
+3. Wait for the message to be posted by the validator set on the SKALE Chain, which is the net-new minted NFT corresponding to the NFT (by id) locked on Ethereum during the bridge
+
+### Bridge Tokens
+
+The following will help you bridge an NFT from Ethereum to SKALE.
+
+<Code code={bridgeERC721Js} lang="js" title="bridge.js" />
