--- a/src/content/docs/skale-bridge/skale/bridge-erc1155.mdx
+++ b/src/content/docs/skale-bridge/skale/bridge-erc1155.mdx
@@ -17,10 +17,6 @@ SKALE's Interchain Messaging Agent (IMA) Bridge allows for direct communication 
 
 The following walks you through setting up an ERC-1155 token between two SKALE Chains and how to programatically bridge.
 
-<Aside type="note">
-Moving assets between two SKALE Chains i.e Europa and Nebula requires no custom modifications. However, assets bridged in from Ethereum between multiple SKALE Chains requires extra steps by default.
-</Aside>
-
 ## Important Information
 - When a SKALE Chain is created, there are no ERC-1155 tokens mapped by default
 - A token being bridged between two chains should have its supply **issued** (i.e minted) on one chain. The second SKALE Chain mints by design via IMA, however, the token should not be mintable any other way
@@ -28,6 +24,10 @@ Moving assets between two SKALE Chains i.e Europa and Nebula requires no custom 
 - Tokens being bridged from SKALE Chain to SKALE Chain are minted by IMA on the destination chain
 
 ## Bridge Setup
+
+<Aside type="note">
+If the SKALE Chains you are mapping the ERC-1155 token from/to are not connected, please [connect the SKALE Chains](/skale-bridge/skale/connect-schains).
+</Aside>
 
 ### 1. Prepare the ERC-1155
 
@@ -38,7 +38,7 @@ If the mint function is not locked down to just the IMA Bridge, specifically Tok
 </Aside>
 
 <Aside type="caution" title="Caution on Burning">
-If the burn function is not locked down to just the IMA Bridge, specifically TokenManagerERC1155; there is a chance that the supply on the SKALE Chain side could be "burned", while the tokens still exist on Ethereum which could later be withdrawn under certain circumstances. It is recommended that explicit burns on a SKALE Chain should be avoided for bridged tokens.
+If the burn function is not locked down to just the IMA Bridge, specifically TokenManagerERC1155; there is a chance that the supply on the SKALE Chain side could be "burned", while the tokens still exist on the original SKALE Chain which could later be withdrawn under certain circumstances. It is recommended that explicit burns on a SKALE Chain should be avoided for bridged tokens.
 </Aside>
 
 The following is the base interchain token code that meets the above bridging requirements for IMA. It is not recommended to use this directly, but to use a wrapper. See **YourInterchainNFT.sol** for an example.
@@ -83,17 +83,17 @@ To verify the mapping, you should have an event emitted from TokenManagerERC1155
 
 ## Bridging ERC-1155
 
-The following does not require you to setup your own token. This works with **ANY** ERC-1155 token that is mapped from Ethereum to any SKALE Chain as long as the actual ERC-1155 token on each side does not have additional restrictions around who can transfer.
+The following does not require you to setup your own token. This works with **ANY** ERC-1155 token that is mapped from a SKALE Chain to any other SKALE Chain as long as the actual ERC-1155 token on each side does not have additional restrictions around who can transfer.
 
-The flow for bridging an ERC-1155 from Ethereum to SKALE follows a very similiar flow to a standard ERC-1155 transfer:
+The flow for bridging an ERC-1155 from sChain to sChain follows a very similiar flow to a standard ERC-1155 transfer:
 
 1. Approve the bridge contract on the ERC-1155 token to allow it to move your NFTs
-2. Call the bridge directly to transfer the specific ERC-1155 from Ethereum -> SKALE Chain, if the mapping exists
-3. Wait for the message to be posted by the validator set on the SKALE Chain, which is the net-new minted NFT corresponding to the NFT (by id) locked on Ethereum during the bridge
+2. Call the bridge directly to transfer the specific ERC-1155 from SKALE Chain -> SKALE Chain, if the mapping exists
+3. Wait for the message to be posted by the validator set on the SKALE Chain, which is the net-new minted NFT corresponding to the NFT (by id) locked on the origin SKALE Chain during the bridge
 
 ### Bridge Tokens
 
-The following will help you bridge an NFT from Ethereum to SKALE.
+The following will help you bridge an ERC-1155 NFT from one SKALE Chain to another.
 <Tabs>
   <TabItem label="bridge.js">
     <Code code={bridgeERC1155Js} lang="js" />
