Cleanup Landing Page Links

--- a/src/content/docs/welcome/get-started.mdx
+++ b/src/content/docs/welcome/get-started.mdx
@@ -10,6 +10,22 @@ to scale gaming, AI, DeFi, and other decentralized applications. This page appli
 similiar to a table of contents and provides an introduction to the various products and tools
 available within the SKALE Ecosystem.
 
+### For Developers
+
+Interested in building on the fastest blockchain in the world with zero gas fees?
+You can start building on SKALE in minutes with one of the SKALE Hubs. SKALE Hubs are SKALE Chains
+designed to be shared by many projects instead of being dedicated to a single application. Checkout some of the most
+popular developer docs below!
+
+| Section | Description |
+| ------- | ----------- |
+| [Intro to Solidity](/building-applications/solidity-quickstart) | A quick introduction to the most popular language on SKALE |
+| [Zero Gas Fees](/building-applications/zero-gas-fees) | Jump start your knowledge of how to use zero gas fees on SKALE |
+| [Picking a Chain](/building-applications/pick-a-chain) | Checkout the various SKALE Hubs to determine where to build |
+| [SKALE vs Ethereum](/building-applications/skale-vs-ethereum) | Coming from Ethereum or another EVM? Checkout the comparision guide |
+
+> Join the SKALE team in [Discord](https://discord.gg/skale) to inquire about building on SKALE!
+
 ### For sChain Owners
 
 Interested in having your own blockchain? It has never been easier to have your own
@@ -23,22 +39,6 @@ blockchain with the full securiy of a Layer 1.
 | [Pricing &amp; Payments](/run-a-skale-chain/pricing-and-payments) | Explore the SKALE Network Pricing Model |
 
 > Join the SKALE team in [Discord](https://discord.gg/skale) to inquire about your own chain.
-
-### For Developers
-
-Interested in building on the fastest blockchain in the world with zero gas fees?
-You can start building on SKALE in minutes with one of the SKALE Hubs. SKALE Hubs are SKALE Chains
-designed to be shared by many projects instead of being dedicated to a single application. Checkout some of the most
-popular developer docs below!
-
-| Section | Description |
-| ------- | ----------- |
-| [Intro to Solidity](/building-applications/intro-to-solidity) | A quick introduction to the most popular language on SKALE |
-| [Zero Gas Fees](/building-applications/gas-fees) | Jump start your knowledge of how to use zero gas fees on SKALE |
-| [Picking a Chain](/building-applications/picking-a-chain) | Checkout the various SKALE Hubs to determine where to build |
-| [SKALE vs Ethereum](/building-applications/skale-vs-ethereum) | Coming from Ethereum or another EVM? Checkout the comparision guide |
-
-> Join the SKALE team in [Discord](https://discord.gg/skale) to inquire about building on SKALE!
 
 ### For Validators
 
@@ -55,9 +55,8 @@ to get started as a valdiator.
 
 | Section | Description |
 | ------- | ----------- |
-| [Become a Validator](/run-a-skale-node/become-a-validator) | The perfect starting point to become a SKALE Valdiator |
-| [Compliance Requirements](/building-applications/compliance-requirements) |  Checkout the compliance requirements to ensure consistent rewards |
-| [Node Types](/building-applications/node-types) | Compare the node types within the SKALE Network |
-| [FAQ](/building-applications/faq) | Explore the commonly asked questions from validators |
+| [Overview](/run-a-skale-node/overview) | The perfect starting point to become a SKALE Valdiator |
+| [Compliance Requirements](/run-a-skale-node/compliance-requirements) |  Checkout the compliance requirements to ensure consistent rewards |
+| [Frequently Asked Questions](/run-a-skale-node/faq) | Explore the commonly asked questions from validators |
 
 > Have questions? Join the SKALE [Discord](https://discord.gg/skale) to inquire about running a SKALE Node!
