AI (Claude): Fix Typos

--- a/src/content/docs/building-applications/build-a-dapp.mdx
+++ b/src/content/docs/building-applications/build-a-dapp.mdx
@@ -8,7 +8,7 @@ prev: false
 ---
 
 - **[Zero Gas Fees](/building-applications/gas-fees):** Build on the ONLY decentralized blockchain network in the world with zero gas fees FOREVER.
-- **[Speed](/instant-finality):** SKALE offers the fastest Layer 1 Ethereum-comaptible blockchain in the world. With instant finality and one (1) second blocktimes; it doesn't get much faster.
+- **[Speed](/instant-finality):** SKALE offers the fastest Layer 1 Ethereum-compatible blockchain in the world. With instant finality and one (1) second blocktimes; it doesn't get much faster.
 - **[Scalability](/pick-a-chain):** It's in the name. Build on the only decentralized compute network designed to support you at every stage of your growth.
 - **[Full Support System](https://discord.gg/skale):** Through a combination of developer support, marketing support, and a robust grant program; SKALE is committed to helping decentralize and further the open internet.
 
@@ -42,8 +42,8 @@ Builders are able to experiment and ship products that:
 
 With zero gas fees, a susinstabile economic model, and industry best speed; SKALE is the ideal place for developers serious about bring the world onchain.
 
-Today, the network is home to over [15 SKALE Chains](https://portal.skale.space/chains), over [100 projects](https://portal.skale.space/ecosystem) who have gone live into production, and over 300 projects activley building on SKALE.
-SKALE has become the go-to network for developers building onchain games like [Strayshot](https://www.strayshot.game) and artifical intelliegence (AI) based applications like [Exorde](https://exorde.network).
+Today, the network is home to over [15 SKALE Chains](https://portal.skale.space/chains), over [100 projects](https://portal.skale.space/ecosystem) who have gone live into production, and over 300 projects actively building on SKALE.
+SKALE has become the go-to network for developers building onchain games like [Strayshot](https://www.strayshot.game) and artificial intelligence (AI) based applications like [Exorde](https://exorde.network).
 
-Additionally, SKALE has an activley growing ecosystem of DeFi and financial projects exploring the benefits of zero gas fees and instant finality. Interested in building alongside these world class
+Additionally, SKALE has an actively growing ecosystem of DeFi and financial projects exploring the benefits of zero gas fees and instant finality. Interested in building alongside these world class
 dApps? [Join the SKALE Discord](https://discord.gg/skale) and contact the team today.
