--- a/src/content/docs/building-applications/cex-integration.mdx
+++ b/src/content/docs/building-applications/cex-integration.mdx
@@ -69,7 +69,7 @@ SKALE is known for being incredibly fast. It's very common for new infrastructur
 ### Gas Fees
 
 The native gas token on a SKALE Chain is sFUEL. sFUEL has no monetary value which is how SKALE has zero gas fees.
-You can acquire a small deposit of sFUEL from the [SKALE sFUEL Station](https://sfuelstation.com) for each of the four (4) core hubs. Exchanges are automatically elligible on SKALE Hubs to operate for free as long as they list an active token on the SKALE Chain. When adding support for a SKALE Chain, exchanges may contact the core team for support in attaining a larger deposit of sFUEL.
+You can acquire a small deposit of sFUEL from the [SKALE sFUEL Station](https://sfuelstation.com) for each of the four (4) core hubs. Exchanges are automatically eligible on SKALE Hubs to operate for free as long as they list an active token on the SKALE Chain. When adding support for a SKALE Chain, exchanges may contact the core team for support in attaining a larger deposit of sFUEL.
 
 <Aside type="danger" title="Warning">You should NEVER list sFUEL as part of a trading pair or use it for trading</Aside>
 
