--- a/src/content/docs/building-applications/gasless-transactions.mdx
+++ b/src/content/docs/building-applications/gasless-transactions.mdx
@@ -1,6 +1,6 @@
 ---
 title: Gasless Transactions
-description: Gasless transactions are native to SKALE and enable truely invisible transactions
+description: Gasless transactions are native to SKALE and enable truly invisible transactions
 ---
 
 import { Aside } from "@astrojs/starlight/components";
@@ -24,7 +24,7 @@ This computation cost is what makes it such a great deterrent from being used to
 ### Understanding Magic Numbers
 
 SKALE uses the concept of "the magic number" in conjunction with Proof of Work to allow the sender (i.e the client) and SKALE Chain to agree that a transaction is valid
-EVEN IF there is not a sufficient amount of sFUEL (inclusive of 0 sFUEL) in the sender's account. This also allows gasless transactions to remain fully comaptible with the
+EVEN IF there is not a sufficient amount of sFUEL (inclusive of 0 sFUEL) in the sender's account. This also allows gasless transactions to remain fully compatible with the
 Ethereum Virtual Machine and most popular tools.
 
 ### Proof of Work Algorithm
