--- a/src/content/docs/building-applications/pick-a-chain.mdx
+++ b/src/content/docs/building-applications/pick-a-chain.mdx
@@ -8,7 +8,7 @@ description: Understanding the different sChains available to developers
 A SKALE Chain is a layer 1 blockchain running within the SKALE Network. It leverages the networks pool of validators for shared security,
 has zero gas fees, single-slot finality, and is incredibly powerful. The truth is that not every developer or project needs their own blockchain.
 
-SKALE offers both shared and dedicated compute option to developers, similiar to most cloud providers. Analagous to a utility company, you have the 
+SKALE offers both shared and dedicated compute option to developers, similar to most cloud providers. Analogous to a utility company, you have the
 option to pick which makes the most sense for you.
 
 ### Shared Resources (a.k.a SKALE Hubs)
@@ -21,7 +21,7 @@ The four (4) SKALE Hubs available today are:
 - Calypso: Consumer, Social, DePIN
 - Europa: DeFi & Liquidity
 - Nebula: Gaming
-- Titan: Artifical Intelligence (AI) & Machine Learning (ML)
+- Titan: Artificial Intelligence (AI) & Machine Learning (ML)
 
 Feel free to pick any of them when getting started on SKALE Testnet! If you are new to building on SKALE and aren't sure where to go
 join us in [Discord](https://discord.gg/skale) and chat with the Developer Success team! Interested in running a hub for a specific niche?
@@ -39,4 +39,4 @@ Checkout the [intro to running a SKALE Chain](/run-a-skale-chain/intro-to-schain
 - You can connect to other hub chains to access liquidity and key partners
 - All sChains are by default connected to Ethereum with the native bridge as well
 - Once your chain is up and running, your chain must stay up to date on [payments](/run-a-skale-chain/pricing-and-payments) in order to stay alive. Chains
-that are >3 months overdue on payments may be elligible for deletion
+that are >3 months overdue on payments may be eligible for deletion
