--- a/src/content/docs/run-a-skale-chain/pricing-and-payments.mdx
+++ b/src/content/docs/run-a-skale-chain/pricing-and-payments.mdx
@@ -5,14 +5,14 @@ description: Pricing information and payment flows for SKALE Chains
 
 import { Aside } from "@astrojs/starlight/components";
 
-Having a dedicated SKALE Chain is similiar to having dedicated resources on a cloud provider.
-Similiar to your cloud provider, you have expenses owed in return for the compute provided.
+Having a dedicated SKALE Chain is similar to having dedicated resources on a cloud provider.
+Similar to your cloud provider, you have expenses owed in return for the compute provided.
 SKALE has a unique pricing structured that is governed by the [SKALE DAO](https://snapshot.box/#/s:skale.eth).
 
 ## SKALE Chain Types
 
 The modular design of SKALE Supernodes allows for a single supernode to support many SKALE Chains of varying sizes.
-The SKALE Network currently has one official size accepted by the DAO and a second size activley in discussion.
+The SKALE Network currently has one official size accepted by the DAO and a second size actively in discussion.
 
 | Chain Name | Node Resources | Cost per Month*|
 | - | - | - |
@@ -27,7 +27,7 @@ want to launch on one of the existing hub chains.
 
 ## Pricing Model
 
-SKALE utilizes a subscription-based pricing model, similiar to cloud computing, unlike most blockchains that use pay-per-transaction gas fees.
+SKALE utilizes a subscription-based pricing model, similar to cloud computing, unlike most blockchains that use pay-per-transaction gas fees.
 
 **Key Benefits**
 
