--- a/src/content/docs/skale-bridge/ethereum/bridge-erc20.mdx
+++ b/src/content/docs/skale-bridge/ethereum/bridge-erc20.mdx
@@ -116,7 +116,7 @@ To verify the mapping, you should have an event emitted from the following:
 
 The following does not require you to setup your own token. This works with **ANY** ERC-20 token that is mapped from Ethereum to any SKALE Chain as long as the actual ERC-20 token on each side does not have additional restrictions around who can transfer.
 
-The flow for bridging an ERC-20 from Ethereum to SKALE follows a very similiar flow to a standard ERC-20 transfer:
+The flow for bridging an ERC-20 from Ethereum to SKALE follows a very similar flow to a standard ERC-20 transfer:
 
 1. Approve the bridge contract on the ERC-20 token to allow it to control some amount of funds
 2. Call the bridge directly to transfer the asset from Ethereum -> SKALE Chain, if the mapping exists
