--- a/src/content/docs/skale-bridge/overview.mdx
+++ b/src/content/docs/skale-bridge/overview.mdx
@@ -22,7 +22,7 @@ Bridging to or from Ethereum? Just pay the ETH gas fees.
 Experience lightning-fast transactions with thanks to SKALE's incredibly fast block times averaging ~1 second. Most messages and bridging transactions deliver in less than 30 seconds!
 
 ### **Decentralized Security**
-SKALE boasts one of the **ONLY** native bridges that is truely decentralized. IMA directly leverages the validators, threshold encryption design, and supermajority requirements that make SKALE Consensus so fast and secure.
+SKALE boasts one of the **ONLY** native bridges that is truly decentralized. IMA directly leverages the validators, threshold encryption design, and supermajority requirements that make SKALE Consensus so fast and secure.
 
 ### **Full EVM Compatibility**
 Seamlessly migrate your existing Ethereum applications without code changes while gaining massive performance improvements PLUS bring your tokens and NFTs!
