--- a/src/content/docs/skale-bridge/skale/bridge-erc20.mdx
+++ b/src/content/docs/skale-bridge/skale/bridge-erc20.mdx
@@ -101,7 +101,7 @@ To verify the mapping, TokenManagerERC20 on the SKALE Chain (DST_CHAIN_NAME from
 
 The following does not require you to setup your own token. This works with **ANY** ERC-20 token that is mapped from a SKALE Chain to any other SKALE Chain as long as the actual ERC-20 token on each side does not have additional restrictions around who can transfer.
 
-The flow for bridging an ERC-20 from sChain to sChain follows a very similiar flow to a standard ERC-20 transfer:
+The flow for bridging an ERC-20 from sChain to sChain follows a very similar flow to a standard ERC-20 transfer:
 
 1. Approve the origin chain bridge contract on the ERC-20 token to allow it to control some amount of funds
 2. Call the origin bridge directly to transfer the asset from SKALE Chain -> SKALE Chain
