--- a/src/content/docs/welcome/get-started.mdx
+++ b/src/content/docs/welcome/get-started.mdx
@@ -7,7 +7,7 @@ import { Aside } from "@astrojs/starlight/components";
 
 SKALE is a network of interconnected Layer 1 blockchains built different
 to scale gaming, AI, DeFi, and other decentralized applications. This page applications
-similiar to a table of contents and provides an introduction to the various products and tools
+similar to a table of contents and provides an introduction to the various products and tools
 available within the SKALE Ecosystem.
 
 ### For Developers
@@ -35,7 +35,7 @@ blockchain with the full securiy of a Layer 1.
 | ------- | ----------- |
 | [Intro to SKALE Chains](/run-a-skale-chain/intro-to-schains) | Learn more about SKALE Chains and how one can be yours |
 | [Customization Options](/run-a-skale-chain/customize-schain) | Checkout ways you can customize your SKALE Chain |
-| [Seup Requirements](/run-a-skale-chain/setup-requirements) | Understand the setup requirements for a new SKALE Chain |
+| [Setup Requirements](/run-a-skale-chain/setup-requirements) | Understand the setup requirements for a new SKALE Chain |
 | [Pricing &amp; Payments](/run-a-skale-chain/pricing-and-payments) | Explore the SKALE Network Pricing Model |
 
 > Join the SKALE team in [Discord](https://discord.gg/skale) to inquire about your own chain.
@@ -43,19 +43,19 @@ blockchain with the full securiy of a Layer 1.
 ### For Validators
 
 Real blockchains require validators or node operators to run the network. SKALE being a network of Layer 1's
-requires strong validator operators to be apart of the nework. Checkout some of the most common resources below
-to get started as a valdiator.
+requires strong validator operators to be a part of the network. Check out some of the most common resources below
+to get started as a validator.
 
 <Aside type="note">
     SKALE utilizes a shared security model where validators are responsible for securing multiple chains.
     This is different from other networks where validators are responsible for securing a single chain.
-    Joining the SKALE Network as a validator means you will be providing resources to the global validaor pool
+Joining the SKALE Network as a validator means you will be providing resources to the global validator pool
     and then randomly rotated on and off of active SKALE Chains.
 </Aside>
 
 | Section | Description |
 | ------- | ----------- |
-| [Overview](/run-a-skale-node/overview) | The perfect starting point to become a SKALE Valdiator |
+| [Overview](/run-a-skale-node/overview) | The perfect starting point to become a SKALE Validator |
 | [Compliance Requirements](/run-a-skale-node/compliance-requirements) |  Checkout the compliance requirements to ensure consistent rewards |
 | [Frequently Asked Questions](/run-a-skale-node/faq) | Explore the commonly asked questions from validators |
 
