--- a/src/content/docs/welcome/intro-to-skale.mdx
+++ b/src/content/docs/welcome/intro-to-skale.mdx
@@ -14,7 +14,7 @@ leveraging the shared security of the broader SKALE Network.
 ## Q: Why does SKALE exist?
 
 SKALE was created to solve the scalability and usability issues of Ethereum. Over the past 5 years
-it has evolved into one of the few truely innovative blockchains in the world and is home to hundreds of builders
+it has evolved into one of the few truly innovative blockchains in the world and is home to hundreds of builders
 interested in leveraging decentralized technology without being limited by gas fees, slow transaction times, congestion, and 
 archaic user experiences.
 
@@ -29,9 +29,9 @@ SKALE Chain maintains its own state independently of Ethereum and leverages the 
 ## Q: How are there zero gas fees?
 
 The SKALE Network -- which is governed by the SKALE DAO -- has a blockchain-as-a-service style fee structure in place.
-SKALE Chain Owners are in charge of paying into the SKALE Network for their SKALE Chain each month in a process simliar to "rent".
+SKALE Chain Owners are in charge of paying into the SKALE Network for their SKALE Chain each month in a process similar to "rent".
 This fee structure is designed to be predictable and transparent while also being as stable as possible to ensure that chain owners can plan for the future while
-taking advange of superior unit economics in the short term.
+taking advantage of superior unit economics in the short term.
 
 > For more on SKALE Chain Pricing, checkout the [SKALE Pricing Page](/run-a-skale-chain/payments-and-pricing).
 
