--- a/src/content/docs/skale-bridge/ethereum/bridge-erc1155.mdx
+++ b/src/content/docs/skale-bridge/ethereum/bridge-erc1155.mdx
@@ -110,7 +110,7 @@ To verify the mapping, you should have an event emitted from the following:
 
 The following does not require you to setup your own token. This works with **ANY** ERC-1155 token that is mapped from Ethereum to any SKALE Chain as long as the actual ERC-1155 token on each side does not have additional restrictions around who can transfer.
 
-The flow for bridging an ERC-1155 from Ethereum to SKALE follows a very similiar flow to a standard ERC-1155 transfer:
+The flow for bridging an ERC-1155 from Ethereum to SKALE follows a very similar flow to a standard ERC-1155 transfer:
 
 1. Approve the bridge contract on the ERC-1155 token to allow it to move your NFTs
 2. Call the bridge directly to transfer the specific ERC-1155 from Ethereum -> SKALE Chain, if the mapping exists
