--- a/src/content/docs/skale-bridge/ethereum/bridge-erc721.mdx
+++ b/src/content/docs/skale-bridge/ethereum/bridge-erc721.mdx
@@ -113,7 +113,7 @@ To verify the mapping, you should have an event emitted from the following:
 
 The following does not require you to setup your own token. This works with **ANY** ERC-721 token that is mapped from Ethereum to any SKALE Chain as long as the actual ERC-721 token on each side does not have additional restrictions around who can transfer.
 
-The flow for bridging an ERC-721 from Ethereum to SKALE follows a very similiar flow to a standard ERC-721 transfer:
+The flow for bridging an ERC-721 from Ethereum to SKALE follows a very similar flow to a standard ERC-721 transfer:
 
 1. Approve the bridge contract on the ERC-721 token to allow it to move your NFTs
 2. Call the bridge directly to transfer the specific ERC-721 from Ethereum -> SKALE Chain, if the mapping exists
