--- a/src/content/docs/skale-bridge/skale/bridge-erc721.mdx
+++ b/src/content/docs/skale-bridge/skale/bridge-erc721.mdx
@@ -80,7 +80,7 @@ To verify the mapping, you should have an event emitted from TokenManagerERC721 
 
 The following does not require you to setup your own token. This works with **ANY** ERC-721 token that is mapped from a SKALE Chain to other any SKALE Chain as long as the actual ERC-721 token on each side does not have additional restrictions around who can transfer.
 
-The flow for bridging an ERC-721 from sChain to sChain follows a very similiar flow to a standard ERC-721 transfer:
+The flow for bridging an ERC-721 from sChain to sChain follows a very similar flow to a standard ERC-721 transfer:
 
 1. Approve the bridge contract on the ERC-721 token to allow it to move your NFTs
 2. Call the bridge directly to transfer the specific ERC-721 from SKALE Chain -> SKALE Chain, if the mapping exists
